--- a/stock_pred_dev.ipynb
+++ b/stock_pred_dev.ipynb
@@ -768,7 +768,7 @@
    "id": "0173565a",
    "metadata": {},
    "source": [
-    "In this pairgrid it's visible that the stock's pct move daily follows a uniform distribution when observing the histogram and kdeplots. Daily stock motion is dependant on the mood of investors rather than raw analysis which explains why the stock prices are distributed in that way. It also explains why the scatterplot follows no particular pattern. The performance of other stocks in the technology sector does not necessarily influence the daily swings of the market, it's more speculative and impulsion based.   "
+    "In this pairgrid it's visible that the stock's pct move daily follows a uniform distribution when observing the histogram and kdeplots. Daily stock motion is dependant on the mood of investors rather than raw analysis which explains why the stock prices are distributed in that way."
    ]
   },
   {
